<resources>
    <string name="app_name">EReminder</string>
    <string name="title_activity_add_er">Add Reminder</string>
    <string name="tab_txt_today">今日</string>
    <string name="tab_txt_tomorrow">明日</string>
    <string name="tab_txt_daily">日常</string>
    <string name="title_desc">DESC: </string>
    <string name="title_time">TIME: </string>
    <string name="title_state">STATE: </string>
    <string name="btn_txt_done">完成</string>
    <string name="btn_txt_undone">未完成</string>
    <string name="btn_txt_comment">Comment</string>
    <string name="btn_txt_modify">修改</string>
    <string name="btn_txt_del">删除</string>
    <string name="btn_txt_add_today">加入今日行程</string>
    <string name="btn_txt_add_tomorrow">加入明日行程</string>
    <string name="txt_status_default">未操作.</string>
    <string name="txt_status_finish">完成.</string>
    <string name="txt_status_unfinish">未完成.</string>
    <string name="title_start_time">开始时间</string>
    <string name="title_end_time">结束时间</string>
    <string name="btn_txt_sure">sure</string>
    <string name="btn_txt_cancel">cancel</string>
    <string name="type_add_new_txt">++NEW++</string>
    <string name="btn_txt_del_done">OK</string>
    <string name="txt_del_sum">Del Select Num: </string>
    <string name="tab_txt_all">All</string>
    <string name="tab_txt_month">Month</string>
    <string name="tab_txt_week">Week</string>
    <string name="btn_txt_add">Add</string>
    <string name="title_setting">Setting</string>
    <string name="txt_export_file">Export Data To File</string>
    <string name="txt_import_file">Import Data From File</string>
    <string name="btn_export">Export</string>
    <string name="btn_import">Import</string>
    <string name="switch_txt_black">Black Theme</string>
    <string name="switch_txt_alarm">Alarm</string>
    <string name="title_txt_comment">Comment: </string>
    <string name="txt_mark_week_desc">Current Week: </string>
    <string name="txt_mark_month_desc">Current Month: </string>
    <string name="txt_mark_all_desc"> </string>
    <string name="txt_title_rank">no. \n </string>
    <string name="txt_title_radio">完成率: \n </string>
    <string name="txt_title_type">类型: </string>
    <string name="txt_title_finish">完成: </string>
    <string name="txt_title_unfinish">未完成: </string>
    <string name="title_dur_day">周期: </string>
    <string name="post_dur_day"> day.</string>
    <string name="title_pre_day">Pre Day: </string>
    <string name="post_pre_day"> </string>

</resources>
