<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <android.support.design.widget.TabLayout
        android:background="?colorPrimaryDark"
        app:tabSelectedTextColor="@android:color/background_light"
        app:tabIndicatorColor="?colorAccent"
        android:layout_width="match_parent"
        android:scrollbars="none"
        android:layout_height="?actionBarSize">
        <android.support.design.widget.TabItem
            android:text="@string/title_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TabLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Switch
        android:background="?colorPrimary"
        android:paddingStart="40dp"
        android:paddingLeft="40dp"
        android:paddingEnd="40dp"
        android:paddingRight="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/switch_txt_black"
        android:id="@+id/switch_black" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <Switch
        android:background="?colorPrimary"
        android:paddingStart="40dp"
        android:paddingLeft="40dp"
        android:paddingEnd="40dp"
        android:paddingRight="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/switch_txt_alarm"
        android:id="@+id/switch_alarm" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal" />

    <RelativeLayout
        android:paddingStart="40dp"
        android:paddingLeft="40dp"
        android:paddingEnd="40dp"
        android:paddingRight="40dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="?colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_export"
            android:text="@string/txt_export_file"
            android:layout_gravity="center_horizontal"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_export"
            android:id="@+id/btn_export"
            android:layout_alignTop="@+id/txt_export"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="1dp" />
    <RelativeLayout
        android:paddingStart="40dp"
        android:paddingLeft="40dp"
        android:paddingEnd="40dp"
        android:paddingRight="40dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="?colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_import_file"
            android:id="@+id/txt_import"
            android:layout_gravity="center_horizontal"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_import"
            android:id="@+id/btn_import"
            android:layout_alignTop="@+id/txt_import"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>



</LinearLayout>