<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.TabLayout
        android:background="?colorPrimaryDark"
        app:tabSelectedTextColor="@android:color/background_light"
        app:tabIndicatorColor="?colorAccent"
        android:id="@+id/tab_layout"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">
        <android.support.design.widget.TabItem
            android:text="@string/tab_txt_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <android.support.design.widget.TabItem
            android:text="@string/tab_txt_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <android.support.design.widget.TabItem
            android:text="@string/tab_txt_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_below="@+id/tab_layout"
        android:layout_marginBottom="?actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>
